hphp/hack/test/typecheck/memoize/prim_by_reference.php.exp
File "prim_by_reference.php", line 5, characters 34-34:
Encountered unexpected token '&'. (Parsing[1002])
