hphp/hack/test/typecheck/memoize/prim_by_reference.php
<?hh

class Foo {
  <<__Memoize>>
  public function someMethod(int &$i): void {}
}
